# GITA

./: .env.example  .gitignore  Dockerfile  NOTES-week7.md  README.md  alembic.ini  docker-compose.yml  greptile.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_agent_actions.py  0003_fts_index.py  0004_add_github_full_name.py  0005_add_embeddings.py  0006_repo_auto_test_generation.py  0007_repo_default_branch.py  1ec4ee5b6a75_add_onboarding_runs_and_file_mappings.py  a3f7c2d91b04_add_code_index_table.py  b4e8f1a23c57_add_graph_tables.py  c5d9e2f34a81_add_rag_tables_and_expand_models.py  cc95384e29e1_initial_schema.py  d6e1f4a52b92_add_outcomes_table.py  e7b2c8d94f13_add_code_index_content.py
prompts/: issue_analyst.md  onboarding.md  onboarding_pass1_structure.md  onboarding_pass2_deepdive.md  onboarding_pass3_5_validation.md  onboarding_pass3_milestones.md  onboarding_pass3_progressive.md  onboarding_pass3a_explore.md  onboarding_pass3b_audit.md  onboarding_pass3c_group.md  onboarding_pass3c_group_progressive.md  onboarding_pass4_issues.md  pr_reviewer.md  progress_tracker.md  risk_detective.md  supervisor.md
src/: main.py
src/agents/: base.py  issue_agent.py  onboarding_agent.py  pr_agent.py  progress_agent.py  registry.py  risk_agent.py  setup.py  supervisor.py
src/api/: dashboard_api.py  health.py  reconcile.py  webhooks.py
src/core/: config.py  database.py  github_auth.py  llm_client.py  logging.py  model_assignments.yml  model_registry.py  repo_manager.py  security.py  timing.py
src/gita/: cli.py  config.py  worker.py
src/indexer/: __init__.py  code_map.py  downloader.py  graph_builder.py  indexer.py  parsers.py  tree_sitter_parser.py
src/models/: __init__.py  agent_run.py  analysis.py  code_index.py  comment.py  commit.py  diff.py  event.py  file_mapping.py  graph_edge.py  graph_node.py  issue.py  milestone.py  onboarding_run.py  outcome.py  pr_file_change.py  pull_request.py  repository.py  review.py  smart_evaluation.py
src/tools/: base.py
src/utils/: checklist.py
src/workers/: context_updater.py  outcome_checkers.py  outcome_registry.py  outcome_scheduler.py  outcomes.py  reconciliation.py  settings.py  tasks.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_agents_setup.py  test_config.py  test_database.py  test_github_auth.py  test_logging.py  test_phase_f_gap_fills.py  test_phase_g_gap_fills.py  test_repo_manager.py  test_security.py  test_timing.py  test_tool_base.py  test_utils_checklist.py
tests/agents/: conftest.py  test_base_agent.py  test_decisions.py  test_dedupe.py  test_diff_parser.py  test_guardrails.py  test_issue_agent.py  test_onboarding.py  test_onboarding_agent.py  test_onboarding_bridge.py  test_pr_agent.py  test_pr_reviewer.py  test_pr_reviewer_bridge.py  test_progress_agent.py  test_registry.py  test_risk_agent.py  test_supervisor.py  test_test_generator_bridge.py  test_test_generator_preflight.py  test_test_generator_recipe.py
tests/api/: test_dashboard_api.py  test_health.py  test_reconcile.py  test_webhooks.py
tests/bakeoff/: run_bakeoff.py  (+1 more)
(+182 files in other folders)
