[project]
name = "github-assistant"
version = "0.1.0"
description = "AI-powered GitHub App that tracks repo progress, analyzes PRs, and manages milestones using specialized agents."
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Configuration & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # AI (OpenRouter - OpenAI-compatible API)
    "openai>=1.35.0",

    # Task queue
    "arq>=0.26.0",
    "redis>=5.0.0",

    # GitHub webhook verification
    "cryptography>=42.0.0",

    # Logging & observability
    "structlog>=24.1.0",

    # Utilities
    "thefuzz>=0.22.0",           # fuzzy string matching for milestone reconciliation
    "pyyaml>=6.0.0",            # parse .github/assistant.yml repo config
    "pyjwt[crypto]>=2.8.0",     # GitHub App JWT authentication

    # Code indexer (tree-sitter for Go/Java/Rust/C#/Ruby/PHP parsing)
    "tree-sitter-languages>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",             # for TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["alembic/*", "src/main.py"]

[tool.coverage.report]
show_missing = true
fail_under = 20

[tool.mypy]
python_version = "3.11"
strict = true
